--- a/posts.html
+++ b/posts.html
@@ -44,19 +44,16 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
   <h2 id="title"></h2>
   <p id="author-date" class="meta"></p>
   <p id="content"></p>
-
   <div id="reactions">
     <button class="reaction-btn" data-reaction="like">❤️ 0</button>
     <button class="reaction-btn" data-reaction="fire">🔥 0</button>
     <button class="reaction-btn" data-reaction="insight">💡 0</button>
   </div>
-
   <div class="comments" id="comments">
     <h3>Comments</h3>
     <div id="comments-list"></div>
     <button id="add-comment-btn" class="btn-dark">Add Comment</button>
   </div>
-
   <button id="back-btn" class="btn-dark" style="display:inline-block">Back</button>
 </div>
 
@@ -66,7 +63,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
 import { getFirestore, doc, getDoc, updateDoc, increment } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
 const firebaseConfig = {
-  apiKey: "YOUR_KEY",
+  apiKey: "AIzaSyBeslEXxh_2j9dLiwAgeRL3p11iqgWfMgo",
   authDomain: "pulsenet-d1fe0.firebaseapp.com",
   projectId: "pulsenet-d1fe0",
   storageBucket: "pulsenet-d1fe0.firebasestorage.app",
@@ -83,7 +80,6 @@ const loginBtn = document.getElementById("login-btn");
 const accountBtn = document.getElementById("account-btn");
 const logoutBtn = document.getElementById("logout-btn");
 const topButtons = document.getElementById("top-buttons");
-
 const titleEl = document.getElementById("title");
 const authorDateEl = document.getElementById("author-date");
 const contentEl = document.getElementById("content");
@@ -120,9 +116,9 @@ async function loadPost(){
   titleEl.textContent = post.title;
   contentEl.textContent = post.content;
 
-  authorDateEl.innerHTML = `
-    By <span class="username author-name" data-uid="${post.authorId}">
-    ${escapeHTML(post.authorName || "Anonymous")}
+  authorDateEl.innerHTML = `By 
+    <span class="username author-name" data-uid="${post.authorId}">
+      ${escapeHTML(post.authorName || "Anonymous")}
     </span>`;
 
   // Author click
@@ -130,7 +126,7 @@ async function loadPost(){
     window.location.href = `account.html?uid=${this.dataset.uid}`;
   };
 
-  // Reactions
+  // Reactions (UNCHANGED)
   reactionsEl.querySelectorAll(".reaction-btn").forEach(btn=>{
     const type = btn.dataset.reaction;
     btn.textContent = `${btn.textContent.split(" ")[0]} ${post.reactions?.[type]||0}`;
@@ -141,33 +137,34 @@ async function loadPost(){
     };
   });
 
+  // Comments (ORIGINAL LOGIC RESTORED)
   commentsListEl.innerHTML = "";
   (post.comments || []).sort((a,b)=> new Date(a.createdAt)-new Date(b.createdAt))
-  .forEach(c=>{
-    const div = document.createElement("div");
-    div.className="comment";
-    div.innerHTML = `
-      <div>
-        <span class="username comment-user" data-uid="${c.authorId}">
-          ${escapeHTML(c.authorName)}
-        </span>: ${escapeHTML(c.text)}
-      </div>
-      <button class="reply-btn btn-dark" style="display:inline-block; font-size: 0.8em; padding: 4px 8px;">Reply</button>
-    `;
+    .forEach(c=>{
+      const div = document.createElement("div");
+      div.className="comment";
+      div.innerHTML = `
+        <div>
+          <span class="username comment-user" data-uid="${c.authorId}">
+            ${escapeHTML(c.authorName)}
+          </span>: ${escapeHTML(c.text)}
+        </div>
+        <button class="reply-btn btn-dark" style="display:inline-block; font-size: 0.8em; padding: 4px 8px;">Reply</button>`;
 
-    div.querySelector(".reply-btn").onclick = ()=>{
-      window.location.href = `comments.html?postId=${postId}&replyTo=${encodeURIComponent(c.authorName)}`;
-    };
+      div.querySelector(".reply-btn").onclick = ()=>{
+        window.location.href = \`comments.html?postId=${postId}&replyTo=${encodeURIComponent(c.authorName)}\`;
+      };
 
-    div.querySelector(".comment-user").onclick = function(){
-      window.location.href = `account.html?uid=${this.dataset.uid}`;
-    };
+      // Comment username click
+      div.querySelector(".comment-user").onclick = function(){
+        window.location.href = \`account.html?uid=${this.dataset.uid}\`;
+      };
 
-    commentsListEl.appendChild(div);
-  });
+      commentsListEl.appendChild(div);
+    });
 }
 
-addCommentBtn.onclick = () => window.location.href = `comments.html?postId=${postId}`;
+addCommentBtn.onclick = () => window.location.href = \`comments.html?postId=${postId}\`;
 
 function escapeHTML(str){
   return str?.replace(/[&<>"']/g,m=>({"&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#039;"}[m]));
