--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button { cursor:pointer;}
 <div id="feed-section" class="hidden">
 
 <div class="header-bar">
-<h1>Perspective</h1>
+<h1>Specter</h1>
 <div>
 <button id="show-publish-btn" class="hidden read-btn">New Story</button>
 <button id="show-account-btn" class="hidden read-btn">Account</button>
