--- a/edit.html
+++ b/edit.html
@@ -5,7 +5,7 @@
 <title>Edit Profile</title>
 <style>
 body { font-family:sans-serif; background:#FDFDFF; padding:20px; color:#111; }
-.card { border:1px solid #ddd; padding:20px; border-radius:15px; }
+.card { border:1px solid #ddd; padding:20px; border-radius:15px; max-width:500px; margin:auto; }
 input, textarea, button {
   width:100%;
   margin:8px 0;
@@ -20,6 +20,7 @@ button {
   border:none;
   cursor:pointer;
 }
+h1 { text-align:center; margin-bottom:20px; }
 </style>
 </head>
 <body>
@@ -52,14 +53,14 @@ let currentUser;
 
 onAuthStateChanged(auth, async user=>{
   if(!user){
-    window.location.href = "index.html";
+    window.location.href = "index.html"; // redirect if not logged in
     return;
   }
 
   currentUser = user;
 
+  // Load existing profile
   const snap = await getDoc(doc(db,"artifacts",appId,"public","data","users",user.uid));
-
   if(snap.exists()){
     const data = snap.data();
     document.getElementById("username").value = data.username || "";
@@ -67,27 +68,25 @@ onAuthStateChanged(auth, async user=>{
   }
 });
 
+// Save updated profile
 document.getElementById("save").onclick = async ()=>{
-
   const username = document.getElementById("username").value.trim();
   const bio = document.getElementById("bio").value.trim();
 
-  if(!username) return alert("Username required");
+  if(!username) return alert("Username is required");
 
+  // Update Firestore user document
   await setDoc(
     doc(db,"artifacts",appId,"public","data","users",currentUser.uid),
-    {
-      username,
-      bio,
-      email: currentUser.email
-    },
+    { username, bio, email: currentUser.email },
     { merge:true }
   );
 
+  // Update Firebase Auth displayName
   await updateProfile(currentUser,{ displayName: username });
 
-  alert("Profile updated");
-  window.location.href = "account.html";
+  alert("Profile updated successfully");
+  window.location.href = "account.html?uid=" + currentUser.uid;
 };
 </script>
 </body>
