--- a/edit.html
+++ b/edit.html
@@ -51,41 +51,55 @@ const appId = "pulsenet-d1fe0";
 
 let currentUser;
 
-onAuthStateChanged(auth, async user=>{
+onAuthStateChanged(auth, async user => {
+
   if(!user){
-    window.location.href = "index.html"; // redirect if not logged in
+    window.location.href = "index.html";
     return;
   }
 
   currentUser = user;
 
-  // Load existing profile
-  const snap = await getDoc(doc(db,"artifacts",appId,"public","data","users",user.uid));
-  if(snap.exists()){
-    const data = snap.data();
-    document.getElementById("username").value = data.username || "";
-    document.getElementById("bio").value = data.bio || "";
+  const userRef = doc(db,"artifacts",appId,"public","data","users",user.uid);
+  const snap = await getDoc(userRef);
+
+  // If no user document exists, create it
+  if(!snap.exists()){
+    await setDoc(userRef,{
+      username: user.displayName || "",
+      bio: "",
+      email: user.email
+    });
   }
+
+  const data = (await getDoc(userRef)).data();
+
+  document.getElementById("username").value = data.username || "";
+  document.getElementById("bio").value = data.bio || "";
 });
 
-// Save updated profile
-document.getElementById("save").onclick = async ()=>{
+document.getElementById("save").onclick = async () => {
+
   const username = document.getElementById("username").value.trim();
   const bio = document.getElementById("bio").value.trim();
 
-  if(!username) return alert("Username is required");
+  if(!username){
+    alert("Username required");
+    return;
+  }
 
-  // Update Firestore user document
-  await setDoc(
-    doc(db,"artifacts",appId,"public","data","users",currentUser.uid),
-    { username, bio, email: currentUser.email },
-    { merge:true }
-  );
+  const userRef = doc(db,"artifacts",appId,"public","data","users",currentUser.uid);
 
-  // Update Firebase Auth displayName
+  await setDoc(userRef,{
+    username,
+    bio,
+    email: currentUser.email
+  },{ merge:true });
+
   await updateProfile(currentUser,{ displayName: username });
 
-  alert("Profile updated successfully");
+  alert("Profile updated");
+
   window.location.href = "account.html?uid=" + currentUser.uid;
 };
 </script>
