--- a/account.html
+++ b/account.html
@@ -37,10 +37,16 @@ const appId = "pulsenet-d1fe0";
 const params = new URLSearchParams(window.location.search);
 let uid = params.get("uid");
 
-async function loadProfile(profileUid){
+async function loadProfile(uid){
 
-  const userRef = doc(db,"artifacts",appId,"public","data","users",profileUid);
-  const snap = await getDoc(userRef);
+  if(!uid){
+    document.getElementById("username").textContent = "User not found";
+    return;
+  }
+
+  const snap = await getDoc(
+    doc(db,"artifacts",appId,"public","data","users",uid)
+  );
 
   if(!snap.exists()){
     document.getElementById("username").textContent = "User not found";
@@ -64,5 +70,6 @@ if(uid){
   });
 }
 </script>
+
 </body>
 </html>
